fixed layout issues

--- a/resources/sass/_tucked-corners.scss
+++ b/resources/sass/_tucked-corners.scss
@@ -3,8 +3,9 @@
 /* tucked corners */
 .corners {
   background: white;
-  height: 88%;
+  height: 100%;
   margin: 10px auto;
+  margin-bottom: 0 ;
   //padding:30px ;
   min-width: 1024px;
   position: relative;
